Add RTL support (fix #6)
Also we may need to update docs text according to RTL support

--- a/docs/sass/bsa.sass
+++ b/docs/sass/bsa.sass
@@ -24,7 +24,7 @@
     line-height: 1.375
     margin-top: 15px
     padding: 15px
-    padding-left: 70px
+    padding-#{$left}: 70px
     position: relative
     &:hover,
     &:focus
@@ -35,7 +35,7 @@
       display: block
     .default-image
       display: block
-      left: 15px
+      #{$left}: 15px
       height: 40px
       position: absolute
       top: 15px
@@ -57,11 +57,11 @@
     justify-content: center
     position: relative
     .default-ad
-      left: 100%
-      margin-left: 2rem
+      #{$left}: 100%
+      margin-#{$left}: 2rem
       position: absolute
       top: 0
     & > a
       margin: 0
       &:not(:nth-child(2))
-        margin-left: 2rem
+        margin-#{$left}: 2rem
