--- a/docs/sass/callout.sass
+++ b/docs/sass/callout.sass
@@ -2,7 +2,10 @@
   +block
   background-color: $background
   border-radius: $radius
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem
+  padding-top: 1.25rem
+  padding-bottom: 1.25rem
+  padding-#{$left}: 1.5rem
+  padding-#{$right}: 2.5rem
   position: relative
   // Colors
   @each $name, $pair in $colors
