--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -36,7 +36,7 @@
   .github-btn
     width: 160px
   .twitter-share-button
-    margin-right: 10px
+    margin-#{$right}: 10px
     min-width: 76px
   .paypal-form
     min-width: 148px
@@ -57,7 +57,10 @@
   li
     display: flex
     height: 30px
-    margin: 5px 1rem 0 0
+    margin-top: 5px
+    margin-bottom: 0
+    margin-#{$right}: 1rem
+    margin-#{$left}: 0
   img
     height: 30px
 
