--- a/docs/sass/global.sass
+++ b/docs/sass/global.sass
@@ -17,16 +17,19 @@ $carbon-space: 15px
     width: 340px
 
 #carbonads
-  text-align: left
+  text-align: $left
   a,
   span
     display: block
   .carbon-wrap
     position: relative
   .carbon-img
-    float: left
+    float: $left
     height: 130px
-    padding: 15px 0 15px 15px
+    padding-top: 15px
+    padding-bottom: 15px
+    padding-#{$right}: 0
+    padding-#{$left}: 15px
     width: 145px
     img
       display: block
@@ -36,13 +39,19 @@ $carbon-space: 15px
     display: block
     color: $text-strong
     line-height: 20px
-    padding: 15px 15px 35px 160px
+    padding-top: 15px
+    padding-bottom: 35px
+    padding-#{$right}: 15px
+    padding-#{$left}: 160px
   .carbon-poweredby
     bottom: 0
     color: $text-light
     font-size: $size-small
-    left: 160px
+    #{$left}: 160px
     line-height: 20px
-    padding: 0 15px 10px 0
+    padding-top: 0
+    padding-bottom: 10px
+    padding-#{$right}: 15px
+    padding-#{$left}: 0
     position: absolute
-    right: 0
+    #{$right}: 0
