--- a/docs/sass/override.sass
+++ b/docs/sass/override.sass
@@ -2,7 +2,7 @@
   +tablet
     small
       color: $text
-      left: 0
+      #{$left}: 0
       margin-top: 10px
       position: absolute
       top: 100%
@@ -15,4 +15,4 @@ body.page-grid .column > .notification
 
 +tablet
   .header-item .button + .button
-    margin-left: 0.75rem
+    margin-#{$left}: 0.75rem
