--- a/docs/sass/route.sass
+++ b/docs/sass/route.sass
@@ -4,14 +4,14 @@ html.route-index
 
   .title.is-2 a
     color: #242424
-    padding-left: 48px
+    padding-#{$left}: 48px
     position: relative
 
   .title.is-2 a:hover
     color: #00d1b2
 
   .title.is-2 .icon.is-medium
-    left: 8px
+    #{$left}: 8px
     position: absolute
     top: 10px
 
@@ -30,7 +30,7 @@ html.route-index
 
   @media screen and (max-width: 979px)
     .title.is-2 a
-      padding-left: 0
+      padding-#{$left}: 0
 
     .title.is-2 .icon.is-medium
       display: none
