--- a/docs/sass/specific.sass
+++ b/docs/sass/specific.sass
@@ -4,7 +4,7 @@
       width: 320px
 
 .color
-  border-radius: 2px;
+  border-radius: 2px
   box-shadow: inset 0 0 0 1px rgba(black, 0.5)
   display: inline-block
   float: left
