--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -99,7 +99,7 @@ table
   width: 100%
   td,
   th
-    text-align: left
+    text-align: $left
     vertical-align: top
   th
     color: $text-strong
