--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -39,7 +39,7 @@
   justify-content: center
   padding: 0.75rem
   &:not(:last-child)
-    border-right: 1px solid $border
+    border-#{$right}: 1px solid $border
 
 .card
   background-color: $white
