--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -14,12 +14,14 @@
   flex-basis: auto
   flex-grow: 1
   flex-shrink: 1
-  text-align: left
+  text-align: $left
 
 .media
   align-items: flex-start
   display: flex
-  text-align: left
+  text-align: $left
+  @if ($right == 'left')
+    flex-direction: row-reverse
   .content:not(:last-child)
     margin-bottom: 0.75rem
   .media
