--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -17,9 +17,9 @@
       color: $link-invert
   li
     ul
-      border-left: 1px solid $border
+      border-#{$left}: 1px solid $border
       margin: 0.75em
-      padding-left: 0.75em
+      padding-#{$left}: 0.75em
 
 .menu-label
   color: $text-light
