--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -38,7 +38,7 @@
   .delete
     flex-grow: 0
     flex-shrink: 0
-    margin-left: 0.75em
+    margin-#{$left}: 0.75em
   & + .message-body
     border-top-left-radius: 0
     border-top-right-radius: 0
