--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -20,7 +20,7 @@
   background: none
   height: 40px
   position: fixed
-  right: 20px
+  #{$right}: 20px
   top: 20px
   width: 40px
 
@@ -58,7 +58,7 @@
   border-top: 1px solid $border
   .button
     &:not(:last-child)
-      margin-right: 10px
+      margin-#{$right}: 10px
 
 .modal-card-body
   +overflow-touch
