--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -42,10 +42,7 @@ a.nav-item
   &.is-tab
     border-bottom: 1px solid transparent
     border-top: 1px solid transparent
-    padding-bottom: calc(0.75rem - 1px)
-    padding-left: 1rem
-    padding-right: 1rem
-    padding-top: calc(0.75rem - 1px)
+    padding: calc(0.75rem - 1px) 1rem
     &:hover
       border-bottom-color: $primary
       border-top-color: transparent
@@ -56,7 +53,7 @@ a.nav-item
   // Responsiveness
   +desktop
     &.is-brand
-      padding-left: 0
+      padding-#{$left}: 0
 
 // Containers
 
