--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -89,7 +89,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
 .pagination-list
   li
     &:not(:first-child)
-      margin-left: 0.375rem
+      margin-#{$left}: 0.375rem
 
 +mobile
   .pagination
@@ -100,7 +100,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
     flex-shrink: 1
     width: calc(50% - 0.375rem)
   .pagination-next
-    margin-left: 0.75rem
+    margin-#{$left}: 0.75rem
   .pagination-list
     margin-top: 0.75rem
     li
@@ -115,7 +115,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
     order: 1
   .pagination-previous,
   .pagination-next
-    margin-left: 0.75rem
+    margin-#{$left}: 0.75rem
   .pagination-previous
     order: 2
   .pagination-next
@@ -124,7 +124,7 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
     justify-content: space-between
     &.is-centered
       .pagination-previous
-        margin-left: 0
+        margin-#{$left}: 0
         order: 1
       .pagination-list
         justify-content: center
@@ -133,11 +133,11 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
         order: 3
     &.is-right
       .pagination-previous
-        margin-left: 0
+        margin-#{$left}: 0
         order: 1
       .pagination-next
         order: 2
-        margin-right: 0.75rem
+        margin-#{$right}: 0.75rem
       .pagination-list
         justify-content: flex-end
         order: 3
