--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -48,7 +48,7 @@
   justify-content: flex-start
   padding: 0.5em 0.75em
   input[type="checkbox"]
-    margin-right: 0.75em
+    margin-#{$right}: 0.75em
   & > .control
     flex-grow: 1
     flex-shrink: 1
@@ -56,7 +56,7 @@
   &.is-wrapped
     flex-wrap: wrap
   &.is-active
-    border-left-color: $link
+    border-#{$left}-color: $link
     color: $link-active
     .panel-icon
       color: $link
@@ -70,7 +70,7 @@ label.panel-block
 .panel-icon
   +fa(14px, 1em)
   color: $text-light
-  margin-right: 0.75em
+  margin-#{$right}: 0.75em
   .fa
     font-size: inherit
     line-height: inherit
