--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -44,14 +44,14 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
       height: 1.5em
       width: 1.5em
     &:first-child:not(:last-child)
-      margin-left: calc(-0.375em - 1px)
-      margin-right: 0.1875em
+      margin-#{$left}: calc(-0.375em - 1px)
+      margin-#{$right}: 0.1875em
     &:last-child:not(:first-child)
-      margin-left: 0.1875em
-      margin-right: calc(-0.375em - 1px)
+      margin-#{$left}: 0.1875em
+      margin-#{$right}: calc(-0.375em - 1px)
     &:first-child:last-child
-      margin-left: calc(-0.375em - 1px)
-      margin-right: calc(-0.375em - 1px)
+      margin-#{$left}: calc(-0.375em - 1px)
+      margin-#{$right}: calc(-0.375em - 1px)
   // States
   &:hover,
   &.is-hovered
