--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -25,7 +25,7 @@ $table-row-even-hover-background: $white-ter !default
       width: 1%
   th
     color: $text-strong
-    text-align: left
+    text-align: $left
   tr
     &:hover
       background-color: $table-row-hover-background
