--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -25,21 +25,21 @@
     flex: none
     width: 25%
   .columns.is-mobile > &.is-offset-three-quarters
-    margin-left: 75%
+    margin-#{$left}: 75%
   .columns.is-mobile > &.is-offset-two-thirds
-    margin-left: 66.6666%
+    margin-#{$left}: 66.6666%
   .columns.is-mobile > &.is-offset-half
-    margin-left: 50%
+    margin-#{$left}: 50%
   .columns.is-mobile > &.is-offset-one-third
-    margin-left: 33.3333%
+    margin-#{$left}: 33.3333%
   .columns.is-mobile > &.is-offset-one-quarter
-    margin-left: 25%
+    margin-#{$left}: 25%
   @for $i from 1 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
       width: ($i / 12) * 100%
     .columns.is-mobile > &.is-offset-#{$i}
-      margin-left: ($i / 12) * 100%
+      margin-#{$left}: ($i / 12) * 100%
   +mobile
     &.is-narrow-mobile
       flex: none
@@ -62,21 +62,21 @@
       flex: none
       width: 25%
     &.is-offset-three-quarters-mobile
-      margin-left: 75%
+      margin-#{$left}: 75%
     &.is-offset-two-thirds-mobile
-      margin-left: 66.6666%
+      margin-#{$left}: 66.6666%
     &.is-offset-half-mobile
-      margin-left: 50%
+      margin-#{$left}: 50%
     &.is-offset-one-third-mobile
-      margin-left: 33.3333%
+      margin-#{$left}: 33.3333%
     &.is-offset-one-quarter-mobile
-      margin-left: 25%
+      margin-#{$left}: 25%
     @for $i from 1 through 12
       &.is-#{$i}-mobile
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-mobile
-        margin-left: ($i / 12) * 100%
+        margin-#{$left}: ($i / 12) * 100%
   +tablet
     &.is-narrow,
     &.is-narrow-tablet
@@ -107,19 +107,19 @@
       width: 25%
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet
-      margin-left: 75%
+      margin-#{$left}: 75%
     &.is-offset-two-thirds,
     &.is-offset-two-thirds-tablet
-      margin-left: 66.6666%
+      margin-#{$left}: 66.6666%
     &.is-offset-half,
     &.is-offset-half-tablet
-      margin-left: 50%
+      margin-#{$left}: 50%
     &.is-offset-one-third,
     &.is-offset-one-third-tablet
-      margin-left: 33.3333%
+      margin-#{$left}: 33.3333%
     &.is-offset-one-quarter,
     &.is-offset-one-quarter-tablet
-      margin-left: 25%
+      margin-#{$left}: 25%
     @for $i from 1 through 12
       &.is-#{$i},
       &.is-#{$i}-tablet
@@ -127,7 +127,7 @@
         width: ($i / 12) * 100%
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet
-        margin-left: ($i / 12) * 100%
+        margin-#{$left}: ($i / 12) * 100%
   +desktop
     &.is-narrow-desktop
       flex: none
@@ -150,21 +150,21 @@
       flex: none
       width: 25%
     &.is-offset-three-quarters-desktop
-      margin-left: 75%
+      margin-#{$left}: 75%
     &.is-offset-two-thirds-desktop
-      margin-left: 66.6666%
+      margin-#{$left}: 66.6666%
     &.is-offset-half-desktop
-      margin-left: 50%
+      margin-#{$left}: 50%
     &.is-offset-one-third-desktop
-      margin-left: 33.3333%
+      margin-#{$left}: 33.3333%
     &.is-offset-one-quarter-desktop
-      margin-left: 25%
+      margin-#{$left}: 25%
     @for $i from 1 through 12
       &.is-#{$i}-desktop
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-desktop
-        margin-left: ($i / 12) * 100%
+        margin-#{$left}: ($i / 12) * 100%
   +widescreen
     &.is-narrow-widescreen
       flex: none
@@ -187,21 +187,21 @@
       flex: none
       width: 25%
     &.is-offset-three-quarters-widescreen
-      margin-left: 75%
+      margin-#{$left}: 75%
     &.is-offset-two-thirds-widescreen
-      margin-left: 66.6666%
+      margin-#{$left}: 66.6666%
     &.is-offset-half-widescreen
-      margin-left: 50%
+      margin-#{$left}: 50%
     &.is-offset-one-third-widescreen
-      margin-left: 33.3333%
+      margin-#{$left}: 33.3333%
     &.is-offset-one-quarter-widescreen
-      margin-left: 25%
+      margin-#{$left}: 25%
     @for $i from 1 through 12
       &.is-#{$i}-widescreen
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-widescreen
-        margin-left: ($i / 12) * 100%
+        margin-#{$left}: ($i / 12) * 100%
 
 .columns
   margin-left: -0.75rem
@@ -234,7 +234,7 @@
         padding: 0.75rem
         width: 33.3333%
         & + .column
-          margin-left: 0
+          margin-#{$left}: 0
   &.is-mobile
     display: flex
   &.is-multiline
