--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -4,7 +4,7 @@
   +overlay
   overflow: hidden
   video
-    left: 50%
+    #{$left}: 50%
     min-height: 100%
     min-width: 100%
     position: absolute
@@ -29,7 +29,7 @@
     display: flex
     justify-content: center
     .button:not(:last-child)
-      margin-right: 1.5rem
+      margin-#{$right}: 1.5rem
 
 // Containers
 
