--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -58,6 +58,10 @@ $widescreen: 1192px !default
 // 1344px container + 40
 $fullhd: 1384px !default
 
+// Direction variables
+$right: right !default
+$left: left !default
+
 // Miscellaneous
 $easing: ease-out !default
 $radius-small: 2px !default
