--- a/docs/sass/example.sass
+++ b/docs/sass/example.sass
@@ -1,7 +1,7 @@
 .example,
 .structure
   border: 1px solid $warning
-  border-top-right-radius: $radius
+  border-top-#{$right}-radius: $radius
   color: $warning-invert
   padding: 1.5rem
   position: relative
@@ -17,7 +17,7 @@
     display: inline-block
     font-size: 7px
     font-weight: bold
-    left: -1px
+    #{$left}: -1px
     letter-spacing: 1px
     padding: 3px 5px
     position: absolute
@@ -92,14 +92,14 @@ $structure-invert: $danger-invert
     cursor: pointer
     outline: none
     position: absolute
-    right: 0
+    #{$right}: 0
     top: 0
     &:hover
       border-color: $code
       color: $code
   .expand
-    border-right-width: 1px
-    right: 50px
+    border-#{$right}-width: 1px
+    #{$right}: 50px
   +tablet
     pre
       white-space: pre-wrap
