--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -49,7 +49,7 @@
     margin-bottom: 1em
   blockquote
     background-color: $background
-    border-left: 5px solid $border
+    border-#{$left}: 5px solid $border
     padding: 1.25em 1.5em
   ol
     list-style: decimal outside
@@ -84,7 +84,7 @@
       vertical-align: top
     th
       color: $text-strong
-      text-align: left
+      text-align: $left
     tr
       &:hover
         background-color: $background
