--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -2,7 +2,10 @@
   +block
   background-color: $background
   border-radius: $radius
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem
+  padding-top: 1.25rem
+  padding-bottom: 1.25rem
+  padding-#{$right}: 2.5rem
+  padding-#{$left}: 1.5rem
   position: relative
   a:not(.button)
     color: currentColor
@@ -14,7 +17,7 @@
     background: transparent
   & > .delete
     position: absolute
-    right: 0.5em
+    #{$right}: 0.5em
     top: 0.5em
   .title,
   .subtitle,
