--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -55,7 +55,7 @@
   font-size: $size-medium
   height: 2em
   justify-content: center
-  margin-right: 1.5rem
+  margin-#{$right}: 1.5rem
   min-width: 2.5em
   padding: 0.25rem 0.5rem
   text-align: center
