--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -13,8 +13,8 @@
   vertical-align: top
   white-space: nowrap
   .delete
-    margin-left: 0.25em
-    margin-right: -0.375em
+    margin-#{$left}: 0.25em
+    margin-#{$right}: -0.375em
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
