Obeying align modifiers on .message-header

--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -19,6 +19,13 @@
       .message-body
         border-color: $color
         color: desaturate(darken($color, $darken-percentage), $desaturate-percentage)
+        
+  &.has-text-centered .message-header
+    justify-content: center
+  &.has-text-left .message-header
+    justify-content: flex-start
+  &.has-text-right .message-header
+    justify-content: flex-end
 
 .message-header
   align-items: center
