--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -41,6 +41,7 @@
     .columns.is-mobile > &.is-offset-#{$i}
       margin-left: ($i / 12) * 100%
   +mobile
+    padding: 0.75rem 0
     &.is-narrow-mobile
       flex: none
     &.is-full-mobile
@@ -243,7 +244,8 @@
     align-items: center
   // Responsiveness
   +mobile
-    margin: 0
+    margin-left: 0
+    margin-right: 0
   +tablet
     &:not(.is-desktop)
       display: flex
