Add .is-narrow modifier for .hero layout

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -132,6 +132,10 @@
           .nav-item
             border-top-color: rgba($color-invert, 0.2)
   // Sizes
+  &.is-narrow
+    .hero-body
+      padding-bottom: 1.5rem
+      padding-top: 1.5rem
   &.is-medium
     +tablet
       .hero-body
