--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -79,17 +79,12 @@ $input-radius:              $radius !default
 
 .checkbox,
 .radio
-  align-items: center
   cursor: pointer
-  display: inline-flex
-  flex-wrap: wrap
-  justify-content: flex-start
-  line-height: 1.5
+  display: inline-block
+  line-height: 1.25
   position: relative
-  vertical-align: top
   input
     cursor: pointer
-    margin-right: 0.5em
   &:hover
     color: $input-hover
   &[disabled]
