--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! bulma.io v0.4.0 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -7260,6 +7261,7 @@ html.route-index #carbon {
   display: block;
   line-height: 1.375;
   margin-top: 15px;
+  min-height: 70px;
   padding: 15px;
   padding-left: 70px;
   position: relative;
@@ -7294,7 +7296,16 @@ html.route-index #carbon {
 
 #_default_ > a .default-title {
   color: #363636;
+  display: inline;
   font-weight: 700;
+}
+
+#_default_ > a .default-title:after {
+  content: " — ";
+}
+
+#_default_ > a .default-description {
+  display: inline;
 }
 
 @media screen and (min-width: 769px), print {
