Fixes #466 keeping content justified to the center

--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -20,7 +20,8 @@
   flex-shrink: 0
   .level-item
     &:not(:last-child)
-      margin-right: 0.75rem
+      +tablet
+        margin-right: 0.75rem
     // Modifiers
     &.is-flexible
       flex-grow: 1
