Set .select, .select select max-width to 100%

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -100,6 +100,7 @@ $input-radius:              $radius !default
   height: 2.25em
   position: relative
   vertical-align: top
+  max-width: 100%
   &:after
     +arrow($input-arrow)
     margin-top: -0.375em
@@ -113,6 +114,7 @@ $input-radius:              $radius !default
     font-size: 1em
     outline: none
     padding-right: 2.5em
+    max-width: 100%
     &:hover
       border-color: $input-hover-border
     &::-ms-expand
