--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2904,11 +2904,11 @@ input[type="submit"].button {
   padding: 0.25em 0.5em;
 }
 
-.table.is-striped tbody tr:nth-child(even) {
+.table.is-striped tbody tr:not(.is-selected):nth-child(even) {
   background-color: #fafafa;
 }
 
-.table.is-striped tbody tr:nth-child(even):hover {
+.table.is-striped tbody tr:not(.is-selected):nth-child(even):hover {
   background-color: whitesmoke;
 }
 
