--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -20,3 +20,7 @@ html
   \::selection
     background: $primary
     color: $primary-invert
+
+@debug "hsl(294, 71%, 79%)"
+@debug colorLuminance(hsl(294, 71%, 79%))
+@debug findColorInvert(hsl(294, 71%, 79%))
