--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6433,7 +6433,7 @@ label.panel-block:hover {
 }
 
 .highlight {
-  background-color: #fdf6e3;
+  background-color: #f5f5f5;
   color: #586e75;
 }
 
@@ -6705,6 +6705,7 @@ svg {
 }
 
 #carbonads {
+  font-size: 14px;
   text-align: left;
 }
 
@@ -7056,7 +7057,7 @@ html.route-index #carbon {
 
 .color {
   border-radius: 2px;
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
   display: inline-block;
   float: left;
   height: 24px;
@@ -7122,6 +7123,7 @@ html.route-index #carbon {
 
 .highlight pre {
   max-height: 600px;
+  margin-bottom: 0 !important;
 }
 
 .structure {
