--- a/docs/sass/specific.sass
+++ b/docs/sass/specific.sass
@@ -5,7 +5,7 @@
 
 .color
   border-radius: 2px;
-  box-shadow: inset 0 0 0 1px rgba(black, 0.5)
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1)
   display: inline-block
   float: left
   height: 24px
