--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2053,6 +2053,7 @@ input[type="submit"].button {
 .select {
   display: inline-block;
   height: 2.25em;
+  max-width: 100%;
   position: relative;
   vertical-align: top;
 }
@@ -2105,6 +2106,7 @@ input[type="submit"].button {
   cursor: pointer;
   display: block;
   font-size: 1em;
+  max-width: 100%;
   outline: none;
   padding-right: 2.5em;
 }
@@ -7128,7 +7130,7 @@ label.panel-block:hover {
 }
 
 .highlight {
-  background-color: #fdf6e3;
+  background-color: #f5f5f5;
   color: #586e75;
 }
 
@@ -7400,6 +7402,7 @@ svg {
 }
 
 #carbonads {
+  font-size: 14px;
   text-align: left;
 }
 
@@ -7897,7 +7900,7 @@ html.route-index #carbon {
 
 .color {
   border-radius: 2px;
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
   display: inline-block;
   float: left;
   height: 24px;
@@ -7963,6 +7966,7 @@ html.route-index #carbon {
 
 .highlight pre {
   max-height: 600px;
+  margin-bottom: 0 !important;
 }
 
 .structure {
