Removed grid layout using text like is-half, is-one. It is redundant, we use the numeric notation instead

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -5,7 +5,7 @@ html
   -webkit-font-smoothing: antialiased
   min-width: 300px
   overflow-x: hidden
-  overflow-y: scroll
+  // overflow-y: scroll
   text-rendering: $render-mode
 
 article,
