Add Missing Check for .has-icons-left

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2594,7 +2594,7 @@ input[type="submit"].button {
   z-index: 4;
 }
 
-.control.has-icons-left .input, .select select {
+.control.has-icons-left .input, .control.has-icons-left .select select {
   padding-left: 2.25em;
 }
 
