Bring oferflow wrapping in line with W3C spec.
CSS  didn't conform to the W3C specification for the  attributes (which only allows normal, break-all, and keep-all).  Change the  property for  to allow the use of the break-word behaviour.

--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -11,7 +11,7 @@ $subtitle-weight:   $weight-light !default
 .title,
 .subtitle
   +block
-  word-break: break-word
+  overflow-wrap: break-word
   em,
   span
     font-weight: $title-weight
