Revert "Fix syntax issue with the docs scss file by removing a semi-colon.  This brings it in line with the style buide in .github/CONTRIBUTING.md"
This reverts commit 4284a8e0342fd600fd6cb75e499941a8c0ee330b.

--- a/docs/sass/specific.sass
+++ b/docs/sass/specific.sass
@@ -4,7 +4,7 @@
       width: 320px
 
 .color
-  border-radius: 2px
+  border-radius: 2px;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1)
   display: inline-block
   float: left
