updated with skule colours

--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -14,13 +14,13 @@ $white-ter:    hsl(0, 0%, 96%) !default
 $white-bis:    hsl(0, 0%, 98%) !default
 $white:        hsl(0, 0%, 100%) !default
 
-$orange:       hsl(14,  100%, 53%) !default
-$yellow:       hsl(48,  100%, 67%) !default
-$green:        hsl(141, 71%,  48%) !default
-$turquoise:    hsl(171, 100%, 41%) !default
-$blue:         hsl(217, 71%,  53%) !default
-$purple:       hsl(271, 100%, 71%) !default
-$red:          hsl(348, 100%, 61%) !default
+$orange:       rgba(255,207,142,1) !default
+$yellow:       rgba(255,236,142,1) !default
+$green:        rgba(236,249,173,1) !default
+$turquoise:    rgba(104,186,151,1) !default
+$blue:         rgba(104,145,177,1) !default
+$purple:       rgba(131,114,187,1) !default
+$red:          rgba(255,142,142,1) !default
 
 // Typography
 
