--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -6,7 +6,7 @@ $input-hover:               $grey-darker !default
 $input-hover-border:        $grey-light !default
 
 $input-focus:               $grey-darker !default
-$input-focus-border:        $link !default
+$input-focus-border:        $grey !default
 
 $input-disabled:            $text-light !default
 $input-disabled-background: $background !default
