--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,6 +1,6 @@
-$primary: $turquoise !default
+$primary: $blue !default
 
-$info: $blue !default
+$info: $turquoise !default
 $success: $green !default
 $warning: $yellow !default
 $danger: $red !default
@@ -18,8 +18,8 @@ $blue-invert: findColorInvert($blue) !default
 $purple-invert: findColorInvert($purple) !default
 $red-invert: findColorInvert($red) !default
 
-$primary-invert: $turquoise-invert !default
-$info-invert: $blue-invert !default
+$primary-invert: $blue-invert !default
+$info-invert: $turquoise-invert !default
 $success-invert: $green-invert !default
 $warning-invert: $yellow-invert !default
 $danger-invert: $red-invert !default
@@ -75,6 +75,6 @@ $size-large: $size-4 !default
 
 // Lists and maps
 
-$colors: ("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "info": ($info, $info-invert), "success": ($success, $success-invert), "warning": ($warning, $warning-invert), "danger": ($danger, $danger-invert)) !default
+$colors: ("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "info": ($info, $info-invert), "success": ($success, $success-invert), "warning": ($warning, $warning-invert), "danger": ($danger, $danger-invert), "purple": ($purple, $purple-invert)) !default
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 !default
